# pisek

./: .gitignore  README.md  check_all.sh  config-v2-documentation  config-v3-documentation  default.nix  example-config  mypy.ini  pyproject.toml  self_tests.sh  setup.py  tests.sh
.devcontainer/cms/: Dockerfile  cms.conf  devcontainer.json  requirements.txt
.github/workflows/: build.yml  python_pisek_tester.yml
docs/: CMS.md  Env.md  Jobs.md  batch_judge.md  communication_judge.md  config-v2-documentation  config-v3-documentation  generator.md  interactive_judge.md  task_overview.md
fixtures/guess/: config
fixtures/max/: README  config  sample.in  solve_bash.sh  solve_judge.py  solve_pascal.pas
fixtures/min_opendata/: config  gen.py  judge.py  solve.py  solve_sec.py  wrong.py
fixtures/odd_stub/: .gitignore  config  gen.py  sample_01.in  solve.cpp  solve_rev.cpp  task.md
fixtures/soucet_cms/: .pisek_cache  config  gen.py  gen_dummy.py  gen_incomplete.py  judge.cpp  judge_invalid_score.cpp  sample_02.in  solve.py  solve_slow_5b.cpp  task.md
fixtures/soucet_kasiopea/: .gitignore  check.py  check_strict.py  config  judge.cpp  judge_bad.cpp  judge_py.py  solve_slow_4b.cpp
fixtures/sum_cms/: .gitignore  check.py  check_loose.py  check_strict.py  config  gen.py  gen_incomplete.py  gen_no_lf.py  judge.cpp  judge_no_partial.cpp  solve_0b.py  solve_3b.cpp  solve_no_lf.py  solve_slow_4b.cpp  task.md  testing_log.json  validate.py  validate_strict.py
fixtures/sum_kasiopea/: .gitignore  check.py  check_strict.py  config  gen.cpp  judge_bad_whitespace.py  judge_py.py  judge_v2.cpp  judge_v2_partial.cpp  solve.py  solve_0b.py  solve_slow_4b.cpp  task.html  validate.py  validate_strict.py
fixtures/task_1/: config  gen.cpp  gen_2.py  sample.in
fixtures/uloha_01/: config  sample.out  solve.cpp  solve_0b.cpp  solve_6b.cpp
nix/: sources.json
pisek/: __main__.py  checker.py  compile.py  defaults-config  diff.py  env.py  extract.py  generate.py  generator.py  judge.py  license.py  main.py  paths.py  pipeline_tools.py  pisek.py  program.py  run.py  self_tests.py  server.py  solution.py  task_config.py  terminal.py  update_config.py  util.py  version.py  visualize.py
pisek/cms/: __init__.py  analize.py  analyze.py  check.py  dataset.py  git.py  info.py  pack.py  result.py  ssh.py  submission.py  submit.py  task.py  testcase.py  util.py  visualize.py
pisek/config/: __init__.py  base_env.py  cms-defaults  config-description  config-v3-documentation  config_description.py  config_errors.py  config_hierarchy.py  config_tools.py  config_types.py  context.py  did_you_mean.py  env.py  global-defaults  kasiopea-defaults  select_solutions.py  task_config.py  update_config.py
pisek/env/: __init__.py  base_env.py  config_errors.py  config_hierarchy.py  context.py  env.py  global-defaults  select_solutions.py  (+2 more)
tests/: test_cli.py  test_cms.py  test_kasiopea.py  test_max.py  util.py
(+122 files in other folders)
