[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pisek"
version = "1.0.0"

dependencies = [
    "PyYAML",
    "colorama",
    "pydantic",
]
requires-python = ">=3.11"

authors = [
    { name="Václav Volhejn", email="vaclav.volhejn@gmail.com" },
    { name="Jiří Beneš", email="mail@jiribenes.com" },
    { name="Michal Töpfer", email="michal.topfer@gmail.com" },
    { name="Jiri Kalvoda", email="jirikalvoda@kam.mff.cuni.cz" },
    { name="Daniel Skýpala", email="skipy@kam.mff.cuni.cz" },
    { name="Benjamin Swart", email="benjaminswart@email.cz" },
]
maintainers = [
    { name="Daniel Skýpala", email="skipy@kam.mff.cuni.cz" },
]

description = "Tool for developing tasks for programming competitions."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy"
]

[project.scripts]
pisek = "pisek.__main__:main_wrapped"

[project.urls]
Homepage = "https://github.com/kasiopea-org/pisek"
Issues = "https://github.com/kasiopea-org/pisek/issues"

[tool.setuptools.packages.find]
exclude = ["fixtures"]

[tool.setuptools.package-data]
pisek = [
    "env/global-defaults",
    "tools/*",
]
